--- a/styles/action-container.css
+++ b/styles/action-container.css
@@ -9,7 +9,6 @@
 
     color: #1B4773;
     border-radius: 13px;
-    background-color: #FFFFFF;
 
     font-size: 20px;
     font-weight: bold;
@@ -18,34 +17,18 @@
 
     justify-content: space-between;
     align-items: flex-start;
-
+    width: 92%;
   }
 
-  .action-section a{
-    display: flex;
 
-    margin-bottom: 16px;
-    padding: 15px;
 
-    color: #1B4773;
-    border-radius: 13px;
-    background-color: #FFFFFF;
-
-    font-size: 20px;
-    font-weight: bold;
-    font-style: normal;
-    line-height: 120%;
-
-    justify-content: space-between;
-    align-items: flex-start;
-    text-decoration: none;
-  }
 
 
 
   .main-page{
     background-color: #F3F3F3;
   }
+
 
 
   .text{
@@ -69,6 +52,7 @@
   }
 
   .large {
+    width: 100%;
     align-items: flex-end;
   }
 
@@ -84,16 +68,38 @@
 
   }
 
-  .large p{
+  .dropdown li{
     font-size: 17px;
     font-weight: normal;
     font-style: normal;
     line-height: 120%;
     color: #000000;
     max-width: 768px;
+    margin-bottom: 10px;
   }
 
-  .large img{
+  .large p, .dropdown p{
+    font-size: 17px;
+    color: #1B4773;
+    max-width: 768px;
+    margin: 30px 0px 10px 0px;
+  }
+
+  .large p{
+    font-weight:normal;
+    font-style: normal;
+    line-height: 120%;
+    color: #000000;
+  }
+
+  .dropdown p{
+    font-weight:bold;
+    font-style: normal;
+    line-height: 120%;
+    color: #1B4773;
+  }
+
+  .large img, .dropdown img{
     margin: 0px 15px;
   }
 
@@ -102,6 +108,18 @@
     margin: 0px 25px;
     max-width: 768px;
   }
+
+
+  .dropdown{
+    width: 96%;
+    align-items: flex-start;
+    background-color: #FFFF;
+  }
+
+  .noaction{
+    background-color: #FFFFFF;
+  }
+
 
 
 }
@@ -121,7 +139,7 @@
   }
 
 
-  .large h3{
+  .large h3, .dropdown h3{
 
     margin-bottom: 6px;
 
@@ -131,13 +149,9 @@
 
   }
 
-  .large p{
+  .large p, .dropdown li, .dropdown p{
     font-size: 22px;
     max-width: 400px;
-  }
-
-  .large img{
-    margin: 0px 15px;
   }
 
   .noaction p{
@@ -170,13 +184,13 @@
   }
 
   .action-container{
-    width: 44%;
+
     padding: 2.4%;
     margin-bottom: 2.4%;
   }
 
   .large{
-    width: 44%;
+
     align-items: baseline;
   }
 
@@ -187,11 +201,17 @@
 
   .noaction p{
     margin: 0px 15px;
-    max-width: 300px;
+    max-width: 75%;
+    font-size: 22px;
+    line-height: 27px;
   }
 
   .icon img{
     width: 45px;
+  }
+
+  .dropdown{
+    width: 96%;
   }
 
 
@@ -203,13 +223,8 @@
 
 @media (min-width: 1440px) {
 
-  /* .action-container{
-    width: 97%;
+  .large p, .dropdown li, .dropdown p{
+    font-size: 25px;
+    max-width: 800px;
   }
-
-  .action-flex-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  } */
 }
