--- a/styles/action-section.css
+++ b/styles/action-section.css
@@ -3,7 +3,16 @@
 @media (min-width: 320px) {
 
   .action-section h2{
-    padding: 16px 0px 30px 0px;
+    padding: 26px 10px 20px 0px;
+
+    font-size: 30px;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 120%;
+  }
+
+  .action-section-add h2{
+    padding: 26px 10px 20px 10px;
 
     font-size: 30px;
     font-weight: bold;
@@ -19,6 +28,34 @@
     background-color: #F3F3F3;
   }
 
+  .dropdown-par{
+    display: none;
+  }
+
+  .action-section a{
+    display: flex;
+
+    margin-bottom: 16px;
+    padding: 15px;
+
+    color: #1B4773;
+    border-radius: 13px;
+    background-color: #FFFFFF;
+
+    font-size: 20px;
+    font-weight: bold;
+    font-style: normal;
+    line-height: 120%;
+
+    justify-content: space-between;
+    align-items: flex-start;
+    text-decoration: none;
+  }
+
+  .action-section a:hover{
+    background-color: #DBDBFF;
+  }
+
 
 }
 
@@ -28,6 +65,8 @@
 
     font-size: 50px;
     line-height: 120%;
+    padding-top: 40px;
+    padding-bottom: 50px;
   }
 
   .action-section {
@@ -38,7 +77,7 @@
 
 @media (min-width: 1024px) {
   .action-section {
-    margin: 0px 40px 60px 40px;
+    margin: 0px 40px 30px 40px;
   }
 }
 
