--- a/styles/banner.css
+++ b/styles/banner.css
@@ -2,15 +2,15 @@
 @media (min-width: 320px) {
   .banner h3{
     margin-top: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 
-    font-size: 60px;
+    font-size: 50px;
     font-weight: bold;
     font-style: normal;
   }
 
   .banner p, .banner li{
-    max-width: 225px;
+    max-width: 150px;
 
     font-size: 17px;
     font-weight: normal;
@@ -21,16 +21,16 @@
   .banner li{
     padding: 6px 0px;
     margin-bottom: 30px;
+    max-width: 225px;
   }
 
 
   .banner {
     margin: 0px 15px 40px 15px;
-    padding-bottom: 30px;
 
     border-radius: 25px;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom;
     background-size: cover;
   }
 
@@ -42,11 +42,19 @@
 
   .stats{
     color: white;
-    background-image: url(../img/bg_stats.png);
+    background-image: url(../img/rea_results.png);
+  }
+
+  .stats-flex{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding:10px 30px 10px 10px;
   }
 
   .trenings{
     background-image: url(../img/bg-trenings.png);
+    background-position: top;
   }
 
   .dpo{
@@ -103,7 +111,6 @@
 
   .banner{
     margin: 0px 150px 80px 150px;
-    background-position: top;
   }
 
 }
