--- a/styles/head.css
+++ b/styles/head.css
@@ -14,6 +14,8 @@
     font-size: 17px;
     font-weight: normal;
     font-style: normal;
+    text-decoration: none;
+    color:black;
   }
 
 
@@ -62,6 +64,8 @@
 
   header a{
     font-size: 20px;
+    text-decoration: none;
+    color:black;
   }
 
   nav li{
@@ -88,6 +92,8 @@
 
   header a{
     font-size: 20px;
+    text-decoration: none;
+    color:black;
   }
 
   nav li{
@@ -114,6 +120,8 @@
 
   header a{
     font-size: 20px;
+    text-decoration: none;
+    color:black;
   }
 
   nav li{
