--- a/styles/person.css
+++ b/styles/person.css
@@ -19,7 +19,8 @@
   }
 
   .person img{
-    width: 30%;
+    width: 20%;
+    padding-left:5%;
   }
 
 
@@ -28,8 +29,9 @@
     font-weight: normal;
     font-style: normal;
     line-height: 120%;
-    max-width: 768px;
+    max-width: 758px;
   }
+
 
   .contacts ul{
     margin-bottom: 20px;
@@ -57,7 +59,7 @@
 @media (min-width: 1024px) {
 
   .person h3{
-    max-width: 600px;
+    max-width: 500px;
 
     font-size: 40px;
 
@@ -65,6 +67,6 @@
 
   .contacts li, .contacts a, .person p{
     font-size: 25px;
-    max-width: 600px;
+    max-width: 830px;
   }
 }
