--- a/styles/carts.css
+++ b/styles/carts.css
@@ -5,6 +5,7 @@
   }
   .carts h2{
     margin: 15px 0px;
+    color: black;
 
     font-size: 25px;
     font-weight: bold;
@@ -14,6 +15,7 @@
 
   .carts p{
     margin-bottom: 30px;
+    color: black;
 
     font-size: 17px;
     font-weight: normal;
