--- a/styles/carts.css
+++ b/styles/carts.css
@@ -10,6 +10,7 @@
     font-weight: bold;
     font-style: normal;
     line-height: 120%;
+    color: black;
   }
 
   .carts p{
@@ -19,6 +20,7 @@
     font-weight: normal;
     font-style: normal;
     line-height: 120%;
+    color: black;
   }
 
   .carts a{
